--- a/web.html
+++ b/web.html
@@ -18,7 +18,7 @@
      <div class="main">
         <img src="logo.png" class="logo" title="LOGO">
         <div class="nav">  
-                <a class="active" href="#">Home</a>
+                <a href="#" class="active"> Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
                 <a href="#">Profile</a>
@@ -51,7 +51,7 @@
      <div class="l box">
        <div class="upper">
          <div class="topic">About us</div>
-         <p >THIS WEBSITE IS A PRACTICW MODEL CREATE WITH THE HELP OF PURE HTML AND CSS</p>
+         <p >THIS WEBSITE IS A PRACTICE MODEL CREATE WITH THE HELP OF PURE HTML AND CSS</p>
        </div>
        <div class="lower">
          <div class="topic">Contact us</div>
@@ -89,7 +89,7 @@
      </div>
    </div>
    <div class="bottom">
-     <p>Copyright ©  <a href="#">GuRU COding</a> <br>
+     <p>Copyright ©  <a href="#">COding GuRU</a> <br>
       All rights reserved</p>
    </div>
  </footer>
